err/githubtools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyGithub_requests-1.26.0.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/githubtools'...
Compiling './lib/python3.5/site-packages/githubtools/commit_status.py'...
***   File "./lib/python3.5/site-packages/githubtools/commit_status.py", line 31
    print "Setting status %s for commit %s." % (status, commit)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/githubtools/create_pull_request.py'...
***   File "./lib/python3.5/site-packages/githubtools/create_pull_request.py", line 24
    print "Pulling %s into %s in repo %s." % (head, base, repo)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/githubtools/merge.py'...
***   File "./lib/python3.5/site-packages/githubtools/merge.py", line 23
    print "Merging %s into %s in repo %s." % (head, base, repo)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/githubtools/merge_pull_request.py'...
***   File "./lib/python3.5/site-packages/githubtools/merge_pull_request.py", line 28
    print "Merging pull request %s (%s into %s)." % (number, p.head.label, p.base.label)
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/githubtools-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
